<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_light_primary">

    <ImageButton
        android:id="@+id/editor_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:padding="11dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editor_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:text="@string/save_button"
        android:textAllCaps="true"
        android:textColor="@color/color_light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/main_separator"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editor_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:text="@string/delete_button"
        android:textColor="@color/color_dark_red"
        app:icon="@drawable/ic_delete"
        app:iconTint="@color/color_light_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/bottom_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/editor_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/editor_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:background="?attr/selectableItemBackground"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
        app:layout_constraintEnd_toStartOf="@id/editor_has_date"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/editor_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_button"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/editor_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview_date_placeholder"
            android:textColor="@color/color_light_blue"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/top_separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="12dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@id/editor_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/editor_has_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:checked="false"
        android:theme="@style/Switch"
        app:layout_constraintBottom_toTopOf="@id/bottom_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_separator" />

    <RadioGroup
        android:id="@+id/editor_importance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/top_separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/editor_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_high_importance"
            android:drawablePadding="5dp"
            android:drawableTint="@color/color_dark_red"
            android:text="@string/high_importance"
            android:textColor="@color/color_dark_red"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/editor_mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/mid_importance"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/editor_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_low_importance"
            android:drawablePadding="5dp"
            android:text="@string/low_importance"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/editor_importance_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/importance_button"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editor_importance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editor_text" />

    <EditText
        android:id="@+id/editor_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/todo_layout_bg"
        android:elevation="4dp"
        android:gravity="top|left"
        android:hint="@string/editor_hint"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/editor_importance_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_separator" />

</androidx.constraintlayout.widget.ConstraintLayout>