<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/preview_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/preview_clickable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/preview_checkbox"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/preview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="3"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/preview_text_placeholder"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/preview_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/preview_date_placeholder"
            android:textColor="@color/support_light_separator"
            android:textSize="14sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/info"
        tools:ignore="ImageContrastCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/info_about_item"
        android:src="@drawable/ic_info_button"
        android:textSize="11sp" />

</androidx.constraintlayout.widget.ConstraintLayout>